Добавляет связь между таблицами Users и Tasks
